[gd_scene load_steps=7 format=3 uid="uid://bmhu4a5nsthrn"]

[ext_resource type="Script" path="res://roaotion.gd" id="1_pjmpt"]
[ext_resource type="Shader" path="res://shader.gdshader" id="2_6fwwd"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_80tri"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_g5tuc"]
sky_material = SubResource("ProceduralSkyMaterial_80tri")

[sub_resource type="Environment" id="Environment_mw0g5"]
background_mode = 2
sky = SubResource("Sky_g5tuc")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nr645"]
render_priority = 0
shader = ExtResource("2_6fwwd")
shader_parameter/base_color = Color(0, 0.5, 1, 1)
shader_parameter/pulse_color = Color(0.0666667, 0.47451, 1, 1)
shader_parameter/speed = 1.0
shader_parameter/scale = 1.0
shader_parameter/distortion = 1.0
shader_parameter/shield_power = 0.8
shader_parameter/rim_power = 2.0
shader_parameter/pulse_frequency = 2.0

[node name="Node3D" type="Node3D" node_paths=PackedStringArray("rec")]
script = ExtResource("1_pjmpt")
rec = NodePath("CSGBox3D")
speed = 90.0
_z = 90.0
_y = 50.0
_x = -52.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_mw0g5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.545135, -0.0383301, 3.41221)

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.545135, -0.0383301, -0.227783)
size = Vector3(4.08856, 0.368652, 0.544434)
material = SubResource("ShaderMaterial_nr645")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 22.375
anchor_top = 10.775
anchor_right = 28.475
anchor_bottom = 13.55
offset_left = -6.10352e-05
offset_top = -3.05176e-05
offset_right = -0.00012207

[node name="_x_range" type="HSlider" parent="Control/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 34.0
offset_right = 159.0
offset_bottom = 50.0
min_value = -90.0
max_value = 90.0

[node name="_y_range" type="HSlider" parent="Control/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 56.0
offset_right = 159.0
offset_bottom = 72.0
min_value = -90.0
max_value = 90.0

[node name="_z_range" type="HSlider" parent="Control/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 82.0
offset_right = 159.0
offset_bottom = 98.0
min_value = -90.0
max_value = 90.0

[node name="Label" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 28.0
offset_right = 61.0
offset_bottom = 51.0
text = "X:"

[node name="Label2" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 51.0
offset_right = 61.0
offset_bottom = 74.0
text = "Y:"

[node name="Label3" type="Label" parent="Control/Panel"]
layout_mode = 0
offset_left = 21.0
offset_top = 80.0
offset_right = 61.0
offset_bottom = 103.0
text = "Z:"
